--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,7 @@
     "es5-shim": "~3.1.0",
     "angular-resource": "1.2.16",
     "angular-cookies": "1.2.16",
-    "angular-sanitize": "1.2.16",
-    "angular-animate": "1.2.16",
-    "angular-route": "1.2.16"
+    "angular-sanitize": "1.2.16"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
