--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
     "angular-cookies": "1.2.16",
-    "angular-sanitize": "1.2.16"
+    "angular-sanitize": "1.2.16",
+    "angular-leaflet-directive": "~0.7.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
