--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,7 @@
     "es5-shim": "~3.1.0",
     "angular-cookies": "1.2.16",
     "angular-sanitize": "1.2.16",
-    "angular-leaflet-directive": "~0.7.7",
-    "mapbox.js": "~1.6.4"
+    "angular-leaflet-directive": "~0.7.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
