--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "es5-shim": "~3.1.0",
     "angular-cookies": "1.2.16",
     "angular-sanitize": "1.2.16",
-    "angular-leaflet-directive": "~0.7.7"
+    "angular-leaflet-directive": "~0.7.7",
+    "Leaflet.MakiMarkers": "~1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
