--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-cookies": "1.2.16",
     "angular-sanitize": "1.2.16",
     "angular-leaflet-directive": "~0.7.7",
-    "Leaflet.MakiMarkers": "~1.0.1"
+    "Leaflet.MakiMarkers": "~1.0.1",
+    "normalize-css": "~3.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
