--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-leaflet-directive": "~0.7.7",
     "Leaflet.MakiMarkers": "~1.0.1",
     "normalize-css": "~3.0.1",
-    "angular-moment": "~0.7.1"
+    "angular-moment": "~0.7.1",
+    "angularjs-geolocation": "~0.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
