--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "Leaflet.MakiMarkers": "~1.0.1",
     "normalize-css": "~3.0.1",
     "angular-moment": "~0.7.1",
-    "angularjs-geolocation": "~0.1.1"
+    "angularjs-geolocation": "~0.1.1",
+    "lodash": "~2.4.1",
+    "geolib": "~2.0.9"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
