--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "1.2.16",
+    "angular-route": "1.2.16",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
     "angular-cookies": "1.2.16",
