--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "angularjs-geolocation": "~0.1.1",
     "lodash": "~2.4.1",
     "geolib": "~2.0.9",
-    "angular-rx": "~0.0.5"
+    "rxjs": "~2.3.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
